--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-		<title>Exemplo BackboneJS</title>		
-		<script type="text/javascript" data-main="js/main" src="js/libs/require.js"></script>
+		<title>Exemplo BackboneJS</title>
+		<script type="text/javascript" data-main="app/main" src="app/libs/require.js"></script>
 	</head>
 	<body>
 		<h1>Exemplo BackboneJS</h1>
 		<div id="container">
 			<div id="menu">
-				
+
 			</div>
 			<div id="content">
-				
+
 			</div>
 		</div>
 	</body>
